--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "pkg . --target host --out-path $HOMEBREW_FORMULA_PREFIX/bin/ -debug",
-    "install2": "pkg . --target host --out-path /usr/local/bin/ -debug"
+    "install": "pkg . --target node17-macos-x64 --out-path $HOMEBREW_FORMULA_PREFIX/bin/ --debug",
+    "install2": "pkg . --target host --out-path $HOMEBREW_FORMULA_PREFIX/bin/ --debug",
+    "install3": "pkg . --target node17-macos-x64 --out-path /usr/local/bin/ --debug"
   },
   "keywords": [],
   "author": "",
