Works with Firefox cookies too

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "pkg . --target node17-macos-x64 --out-path $HOMEBREW_FORMULA_PREFIX/bin/ --debug",
     "install2": "pkg . --target host --out-path $HOMEBREW_FORMULA_PREFIX/bin/ --debug",
-    "install3": "pkg . --target node17-macos-x64 --out-path /usr/local/bin/ --debug"
+    "install3": "pkg . --target node17-macos-x64 --out-path /usr/local/bin/ --debug",
+    "install4": "pkg . --target host --out-path /usr/local/bin/ --debug"
   },
   "keywords": [],
   "author": "",
