--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "main": "index.js",
   "bin": "index.js",
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "npm install --force --global ."
+    "installGlobal": "npm install --force --global ."
   },
   "keywords": [],
   "author": "Matthew Herod",
