--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installGlobal": "npm install --force --global ."
+    "installGlobal": "rm -rf /usr/local/bin/get-cookie ; npm install --force --global ."
   },
   "keywords": [],
   "author": "Matthew Herod",
