--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.5",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": "cli.js",
   "publishConfig": {
     "access": "public"
   },
