--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "installGlobal": "rm -rf /usr/local/bin/get-cookie ; npm install --force --global ."
   },
   "keywords": [],
@@ -16,5 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "sqlite3": "^5.0.8"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0"
   }
 }
