--- a/package.json
+++ b/package.json
@@ -1,24 +1,57 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Node.js module for querying a local user's Chrome cookie",
-  "main": "index.js",
-  "bin": "cli.js",
+  "source": "src/index.js",
+  "bin": "dist/cli.js",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
+    "clean": "git clean -fXd",
+    "build": "parcel build",
     "test": "jest",
-    "installGlobal": "rm -rf /usr/local/bin/get-cookie ; npm install --force --global ."
+    "postbuild": "npm run install:global",
+    "prepublish": "npm run build",
+    "install:global": "npm install --force --global .",
+    "postinstall:global": "find $NVM_BIN -exec chmod +x {} \\; || true",
+    "prettier": "prettier --write 'src/{**/*,*}.{js,json}'"
+  },
+  "targets": {
+    "main": {
+      "source": "src/index.js",
+      "distDir": "dist",
+      "engines": {
+        "node": "16"
+      }
+    },
+    "cli": {
+      "source": "src/cli.js",
+      "distDir": "dist",
+      "engines": {
+        "node": "16"
+      }
+    }
+  },
+  "@parcel/transformer-js": {
+    "inlineFS": false,
+    "inlineEnvironment": false
+  },
+  "engines": {
+    "node": "16"
   },
   "keywords": [],
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "prettier": "^2.7.1"
   }
 }
