--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "1.3.0",
+  "version": "2.0.0-beta.1",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.js",
   "bin": "dist/cli.js",
