--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "2.0.0-beta.6",
+  "version": "2.0.0-beta.7",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.ts",
   "bin": "dist/cli.js",
@@ -54,6 +54,8 @@
   "license": "ISC",
   "dependencies": {
     "colorette": "^2.0.19",
+    "cross-fetch": "^3.1.5",
+    "destr": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "sqlite3": "^5.1.1"
