--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "2.0.0-beta.9",
+  "version": "2.0.0-beta.10",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.ts",
   "bin": "dist/cli.js",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
   "publishConfig": {
