--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "clean": "git clean -fXd && yarn",
     "build": "parcel build",
+    "prepare": "npm run build && npm run prettier",
     "test": "jest",
     "postbuild": "npm run check",
     "prepublish": "npm run build",
@@ -64,14 +65,15 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "lru-cache": "^7.14.0",
-    "sqlite3": "^5.1.1",
-    "user-agents": "^1.0.1163"
+    "minimist": "^1.2.6",
+    "sqlite3": "^5.1.1"
   },
   "devDependencies": {
     "@parcel/packager-ts": "^2.7.0",
     "@parcel/transformer-typescript-types": "^2.7.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.8.2",
     "@types/user-agents": "^1.0.2",
     "jest": "^29.0.3",
