--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.0-rc.3",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.ts",
   "bin": "dist/cli.js",
@@ -66,7 +66,8 @@
     "lodash": "^4.17.21",
     "lru-cache": "^7.14.0",
     "minimist": "^1.2.6",
-    "sqlite3": "^5.1.1"
+    "sqlite3": "^5.1.1",
+    "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
     "@parcel/packager-ts": "^2.7.0",
@@ -75,6 +76,7 @@
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.8.2",
+    "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
     "jest": "^29.0.3",
     "parcel": "^2.7.0",
