--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mherod/get-cookie",
-  "version": "2.0.0-rc.5",
+  "version": "2.0.0-rc.6",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.ts",
   "bin": "dist/cli.js",
@@ -27,14 +27,13 @@
     "main": {},
     "types": {},
     "library": {
-      "source": [
-        "src/index.ts"
-      ],
+      "source": "src/index.ts",
       "distDir": "dist",
       "isLibrary": true,
       "engines": {
         "node": "16"
-      }
+      },
+      "includeNodeModules": false
     },
     "cli": {
       "source": "src/cli.ts",
