--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
   "scripts": {
     "clean": "git clean -fdX && rm -rf node_modules dist && yarn install",
     "build": "parcel build",
+    "postbuild": "npm run check",
     "prepare": "npm run build && npm run prettier",
     "test": "jest",
-    "postbuild": "npm run check",
     "prepublish": "npm run build",
-    "preinstall:global": "npm run build",
-    "install:global": "npm install --force --global .",
-    "postinstall:global": "find $NVM_BIN -exec chmod +x {} \\; || true",
+    "install:global": "npm run build && npm install --force --global .",
     "prettier": "prettier --write 'src/{**/*,*}.{js,json,ts}'",
     "check": "tsc --noEmit"
   },
@@ -80,7 +78,6 @@
     "@types/node": "^18.8.2",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
-    "jest": "^29.0.3",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
