--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "scripts": {
     "clean": "git clean -fdX && rm -rf node_modules dist && yarn install",
+    "lintfix": "prettier --write \"src/**/*.ts\"",
+    "typescript": "tsc",
+    "prebuild": "npm run lintfix",
     "build": "tsc && parcel build",
     "prepare": "npm run build && npm run prettier",
     "test": "jest",
@@ -58,6 +61,7 @@
   "license": "ISC",
   "dependencies": {
     "colorette": "^2.0.19",
+    "consola": "^3.1.0",
     "cross-fetch": "^3.1.5",
     "destr": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -70,16 +74,17 @@
     "user-agents": "^1.0.1178"
   },
   "devDependencies": {
-    "@parcel/packager-ts": "^2.7.0",
-    "@parcel/transformer-typescript-types": "^2.7.0",
+    "@parcel/packager-ts": "latest",
+    "@parcel/transformer-typescript-tsc": "latest",
+    "@parcel/transformer-typescript-types": "latest",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.11.4",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
-    "parcel": "^2.7.0",
-    "prettier": "^2.7.1",
+    "parcel": "latest",
+    "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
