--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "access": "public"
   },
   "scripts": {
-    "clean": "git clean -fdX && rm -rf node_modules dist && yarn install",
+    "clean": "git clean -fdX && rm -rf dist && yarn install",
     "lintfix": "prettier --write \"src/**/*.ts\"",
     "prebuild": "npm run lintfix",
-    "build": "parcel build",
-    "prepare": "npm run build && npm run prettier",
+    "build": "parcel build --no-cache",
+    "prepare": "parcel build --no-cache",
     "test": "jest",
     "prepublish": "npm run build",
     "install:global": "npm run build && npm install --global .",
@@ -32,7 +32,9 @@
       },
       "sourceMap": false,
       "optimize": true,
-      "includeNodeModules": false
+      "includeNodeModules": {
+        "@mapbox/node-pre-gyp": false
+      }
     },
     "cli": {
       "source": "src/cli.ts",
@@ -43,7 +45,9 @@
       },
       "sourceMap": false,
       "optimize": true,
-      "includeNodeModules": false
+      "includeNodeModules": {
+        "@mapbox/node-pre-gyp": false
+      }
     }
   },
   "@parcel/transformer-js": {
@@ -57,32 +61,34 @@
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
-    "colorette": "^2.0.19",
-    "consola": "^3.1.0",
-    "cross-fetch": "^3.1.5",
-    "destr": "^1.2.0",
+    "colorette": "2.0.20",
+    "consola": "3.2.3",
+    "cross-fetch": "^4.0.0",
+    "destr": "2.0.2",
+    "fast-glob": "^3.3.1",
     "jsonwebtoken": "9.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lru-cache": "^7.14.0",
     "minimist": "^1.2.7",
-    "sqlite3": "^5.1.2",
+    "sqlite3": "^5.1.6",
     "tough-cookie": "^4.1.2",
     "user-agents": "^1.0.1178"
   },
   "devDependencies": {
-    "@parcel/packager-ts": "latest",
-    "@parcel/transformer-typescript-tsc": "latest",
-    "@parcel/transformer-typescript-types": "latest",
+    "@mapbox/node-pre-gyp": "^1.0.11",
+    "@parcel/packager-ts": "^2.10.1",
+    "@parcel/transformer-typescript-tsc": "^2.10.1",
+    "@parcel/transformer-typescript-types": "^2.10.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.11.4",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
-    "parcel": "latest",
+    "parcel": "^2.10.1",
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.2.2"
   }
 }
