--- a/package.json
+++ b/package.json
@@ -90,5 +90,10 @@
     "prettier": "^2.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "parcelDependencies": {
+    "@parcel/transformer-typescript-tsc": "^2.10.1",
+    "@parcel/transformer-typescript-types": "^2.10.1",
+    "@parcel/packager-ts": "^2.10.1"
   }
 }
