--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "git clean -fdX && rm -rf dist && yarn install",
     "lintfix": "prettier --write \"src/**/*.ts\"",
     "prebuild": "npm run lintfix",
+    "tsc": "tsc",
     "build": "parcel build --no-cache",
     "prepare": "parcel build --no-cache",
     "test": "jest",
@@ -61,7 +62,6 @@
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
-    "colorette": "2.0.20",
     "consola": "3.2.3",
     "cross-fetch": "^4.0.0",
     "destr": "2.0.2",
@@ -72,24 +72,27 @@
     "lru-cache": "^7.14.0",
     "minimist": "^1.2.7",
     "sqlite3": "^5.1.6",
-    "tough-cookie": "^4.1.2",
-    "user-agents": "^1.0.1178"
+    "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@parcel/packager-ts": "^2.10.1",
     "@parcel/transformer-typescript-tsc": "^2.10.1",
     "@parcel/transformer-typescript-types": "^2.10.1",
+    "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.11.4",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
+    "jest": "^29.7.0",
     "parcel": "^2.10.1",
-    "prettier": "^2.8.1",
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.1.6"
   },
   "parcelDependencies": {
     "@parcel/transformer-typescript-tsc": "^2.10.1",
