--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ Temporary Items
 .idea/aws.xml
 /.idea/sonarlint/issuestore/index.pb
 /.idea/sonarlint
+bun.lockb
+package.json
+bun.lockb
+/bun.lockb
