--- a/package.json
+++ b/package.json
@@ -5,53 +5,19 @@
   "source": "src/index.ts",
   "bin": "dist/cli.js",
   "main": "dist/index.js",
-  "module": "dist/module.js",
   "types": "dist/types.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "clean": "git clean -fdX && rm -rf dist && yarn install",
-    "lintfix": "prettier --write \"src/**/*.ts\"",
-    "prebuild": "npm run lintfix",
     "tsc": "tsc",
-    "build": "parcel build --no-cache",
-    "prepare": "parcel build --no-cache",
+    "build": "bun build src/index.ts --target=node --outdir=dist && bun build src/cli.ts --target=node --outdir=dist && tsc --emitDeclarationOnly",
     "test": "jest",
-    "prepublish": "npm run build",
-    "install:global": "npm run build && npm install --global .",
-    "prettier": "prettier --write ."
-  },
-  "targets": {
-    "types": {},
-    "main": {
-      "source": "src/index.ts",
-      "distDir": "dist",
-      "isLibrary": true,
-      "engines": {
-        "node": ">= 16"
-      },
-      "sourceMap": true,
-      "optimize": false,
-      "includeNodeModules": false
-    },
-    "cli": {
-      "source": "src/cli.ts",
-      "distDir": "dist",
-      "isLibrary": false,
-      "engines": {
-        "node": ">= 16"
-      },
-      "sourceMap": false,
-      "optimize": true,
-      "includeNodeModules": {
-        "@mapbox/node-pre-gyp": false
-      }
-    }
-  },
-  "@parcel/transformer-js": {
-    "inlineFS": false,
-    "inlineEnvironment": true
+    "prepublish": "bun run build",
+    "install:global": "bun run build && npm install --global .",
+    "prettier": "prettier --write .",
+    "copy-files": "cp -r src/cli.js dist/cli.js && cp -r src/index.js dist/index.js && cp -r src/types.d.ts dist/types.d.ts"
   },
   "engines": {
     "node": ">= 16"
@@ -69,32 +35,22 @@
     "lodash-es": "^4.17.21",
     "lru-cache": "^7.14.0",
     "minimist": "^1.2.7",
-    "sqlite3": "^5.1.6",
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@mapbox/node-pre-gyp": "^1.0.11",
-    "@parcel/packager-ts": "^2.10.1",
-    "@parcel/transformer-typescript-tsc": "^2.10.1",
-    "@parcel/transformer-typescript-types": "^2.10.1",
+    "@types/bun": "^1.1.3",
     "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^18.11.4",
+    "@types/node": "^18.19.34",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
     "jest": "^29.7.0",
-    "parcel": "^2.10.1",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
-  },
-  "parcelDependencies": {
-    "@parcel/transformer-typescript-tsc": "^2.10.1",
-    "@parcel/transformer-typescript-types": "^2.10.1",
-    "@parcel/packager-ts": "^2.10.1"
   }
 }
