--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es6",
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "bun-types"],
     "lib": ["es2015", "es2017", "es2021", "dom"],
     "strict": true,
     "skipDefaultLibCheck": true,
