--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "git clean -fdX && rm -rf dist && yarn install",
     "tsc": "tsc",
     "build": "bun build src/index.ts --target=node --outdir=dist && bun build src/cli.ts --target=node --outdir=dist && tsc --emitDeclarationOnly",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prepublish": "bun run build",
     "install:global": "bun run build && npm install --global .",
     "prettier": "prettier --write .",
@@ -26,6 +27,7 @@
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^11.2.1",
     "consola": "3.2.3",
     "cross-fetch": "^4.0.0",
     "destr": "2.0.2",
@@ -38,19 +40,18 @@
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/bun": "^1.1.3",
-    "@types/jest": "^29.5.6",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^18.19.34",
+    "@types/node": "^22.5.1",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
-    "jest": "^29.7.0",
+    "@vitest/coverage-v8": "^2.0.5",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^2.0.5"
   }
 }
