--- a/package.json
+++ b/package.json
@@ -3,27 +3,53 @@
   "version": "2.1.3",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "source": "src/index.ts",
-  "bin": "dist/cli.js",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/types.d.ts",
+  "bin": {
+    "get-cookie": "dist/cli.js"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./cli": {
+      "types": "./dist/cli.d.ts",
+      "import": "./dist/cli.mjs",
+      "require": "./dist/cli.js"
+    }
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "sideEffects": false,
   "publishConfig": {
     "access": "public"
   },
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
-    "clean": "git clean -fdX && rm -rf dist && yarn install",
-    "tsc": "tsc",
-    "build": "bun build src/index.ts --target=node --outdir=dist && bun build src/cli.ts --target=node --outdir=dist && tsc --emitDeclarationOnly",
+    "clean": "git clean -fdX && rm -rf dist && pnpm install",
+    "build": "vite build && tsc --emitDeclarationOnly",
     "test": "vitest run",
     "test:watch": "vitest",
-    "prepublish": "bun run build",
-    "install:global": "bun run build && npm install --global .",
+    "prepublishOnly": "pnpm run build",
     "prettier": "prettier --write .",
-    "copy-files": "cp -r src/cli.js dist/cli.js && cp -r src/index.js dist/index.js && cp -r src/types.d.ts dist/types.d.ts"
+    "lint": "prettier --check .",
+    "install:global": "pnpm run build && pnpm install --global ."
   },
   "engines": {
-    "node": ">= 16"
+    "node": ">=16"
   },
-  "keywords": [],
+  "keywords": [
+    "chrome",
+    "cookies",
+    "browser",
+    "authentication",
+    "cli"
+  ],
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
@@ -37,7 +63,8 @@
     "lodash-es": "^4.17.21",
     "lru-cache": "^7.14.0",
     "minimist": "^1.2.7",
-    "tough-cookie": "^4.1.2"
+    "tough-cookie": "^4.1.2",
+    "undici": "^6.20.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
