--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
     "module": "commonjs",
     "outDir": "dist",
     "outFile": "dist/types.d.ts",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@browsers/*": ["src/browsers/*"],
+      "@db/*": ["src/db/*"],
+      "@types": ["src/types.ts"],
+      "@utils/*": ["src/utils/*"]
+    },
   },
 }
-
