--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   "packageManager": "pnpm@9.12.2",
   "scripts": {
     "clean": "git clean -fdX && rm -rf dist && pnpm install",
-    "build": "vite build && tsc --emitDeclarationOnly",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "build": "vite build",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "prepublishOnly": "pnpm run build",
     "prettier": "prettier --write .",
-    "lint": "prettier --check .",
+    "lint": "eslint . --ext .ts,.tsx",
+    "type-check": "tsc --noEmit",
     "install:global": "pnpm run build && pnpm install --global ."
   },
   "engines": {
@@ -55,7 +56,6 @@
   "dependencies": {
     "better-sqlite3": "^11.2.1",
     "commander": "^12.1.0",
-    "consola": "3.2.3",
     "cross-fetch": "^4.0.0",
     "destr": "2.0.2",
     "fast-glob": "^3.3.1",
@@ -76,10 +76,14 @@
     "@types/node": "^22.5.1",
     "@types/tough-cookie": "^4.0.2",
     "@types/user-agents": "^1.0.2",
-    "@vitest/coverage-v8": "^2.1.4",
+    "@vitest/coverage-v8": "^1.0.0",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "vitest": "^2.1.4"
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0"
   }
 }
