chore: setup npm publishing config and git hooks
- Add husky and lint-staged for git hooks

- Configure pre-commit and pre-push hooks

- Update .npmignore for better package publishing

- Add type checking and testing to publish workflow

--- a/.npmignore
+++ b/.npmignore
@@ -2,3 +2,18 @@
 .parcel-cache/*
 .github/*
 .fleet/*
+node_modules/
+src/
+coverage/
+**/__tests__/
+*.test.ts
+*.spec.ts
+tsconfig.json
+jest.config.ts
+.eslintrc*
+.prettier*
+.git*
+scripts/
+*.log
+.vscode/
+.DS_Store
