--- a/package.json
+++ b/package.json
@@ -7,20 +7,35 @@
   "bin": "dist/cli/cli.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./cli": {
+      "types": "./dist/cli/cli.d.ts",
+      "import": "./dist/cli/cli.mjs",
+      "require": "./dist/cli/cli.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "clean": "git clean -fdX && rm -rf dist && pnpm install",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && chmod +x dist/cli/cli.js",
+    "build": "tsup src/index.ts src/cli/cli.ts --format cjs,esm --dts --clean --sourcemap --minify",
     "test": "jest",
-    "prepublish": "pnpm run build",
+    "type-check": "tsc --noEmit",
+    "prepack": "pnpm run type-check && pnpm run lint && pnpm run test",
+    "prepublishOnly": "pnpm run clean && pnpm run prepack && pnpm run build",
     "install:global": "pnpm run build && pnpm install --global .",
     "prettier": "prettier --write .",
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
     "lint": "eslint . --ext .ts --format codeframe",
     "lint:fix": "eslint . --ext .ts --format codeframe --fix",
-    "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" ts-node -P scripts/tsconfig.json scripts/readGithubCookies.ts"
+    "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" ts-node -P scripts/tsconfig.json scripts/readGithubCookies.ts",
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">= 16"
@@ -58,12 +73,23 @@
     "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "50.6.1",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "15.3.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "1.8.10",
     "tsup": "8.3.5",
     "typescript": "^5.1.6"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
