chore: exclude coverage directory from TypeScript checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": true
-  }
+  },
+  "exclude": ["node_modules", "dist", "coverage"]
 }
