--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.1",
   "description": "Node.js module for querying a local user's Chrome cookie",
   "packageManager": "pnpm@9.15.2",
+  "type": "module",
   "source": "src/index.ts",
   "bin": "dist/cli/cli.js",
   "main": "dist/index.js",
@@ -32,8 +33,8 @@
     "install:global": "pnpm run build && pnpm install --global .",
     "prettier": "prettier --write .",
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
-    "lint": "tsc --noEmit && eslint . --ext .ts --format=codeframe",
-    "lint:fix": "tsc --noEmit && eslint . --ext .ts --format=codeframe --fix",
+    "lint": "tsc --noEmit && eslint . --format=codeframe",
+    "lint:fix": "tsc --noEmit && eslint . --format=codeframe --fix",
     "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" ts-node -P scripts/tsconfig.json scripts/readGithubCookies.ts",
     "prepare": "husky install",
     "docs:dev": "vitepress dev docs",
@@ -48,47 +49,48 @@
   "author": "Matthew Herod",
   "license": "ISC",
   "dependencies": {
-    "consola": "3.2.3",
-    "destr": "2.0.2",
-    "fast-glob": "^3.3.1",
-    "jsonwebtoken": "9.0.0",
+    "consola": "^3.3.3",
+    "destr": "^2.0.3",
+    "fast-glob": "^3.3.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "lru-cache": "^7.14.0",
-    "minimist": "^1.2.7",
-    "tough-cookie": "^4.1.2",
+    "lru-cache": "^11.0.2",
+    "minimist": "^1.2.8",
+    "tough-cookie": "^5.0.0",
     "tsconfig-paths": "^4.2.0",
-    "zod": "3.24.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/better-sqlite3": "7.6.12",
-    "@types/jest": "^29.5.6",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.186",
-    "@types/minimist": "^1.2.2",
-    "@types/node": "^18.19.69",
-    "@types/tough-cookie": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "8.19.0",
-    "@typescript-eslint/parser": "8.19.0",
-    "better-sqlite3": "11.7.0",
-    "eslint": "^8.56.0",
-    "eslint-formatter-codeframe": "7.32.1",
-    "eslint-import-resolver-typescript": "3.7.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsdoc": "50.6.1",
-    "husky": "^8.0.0",
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.13",
+    "@types/minimist": "^1.2.5",
+    "@types/node": "^22.10.4",
+    "@types/tough-cookie": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "better-sqlite3": "^11.7.0",
+    "eslint": "^9.17.0",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.1",
+    "globals": "15.14.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "lint-staged": "15.3.0",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "1.8.10",
-    "tsup": "8.3.5",
-    "typedoc": "0.27.6",
-    "typedoc-plugin-markdown": "4.4.1",
-    "typescript": "^5.1.6",
-    "vitepress": "1.5.0"
+    "lint-staged": "^15.3.0",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsup": "^8.3.5",
+    "typedoc": "^0.27.6",
+    "typedoc-plugin-markdown": "^4.4.1",
+    "typescript": "^5.7.2",
+    "vitepress": "^1.5.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
