fix: update CI workflow and npmrc settings

--- a/.npmrc
+++ b/.npmrc
@@ -4,4 +4,6 @@ strict-peer-dependencies=false
 shamefully-hoist=true
 package-lock=false
 save-exact=true
-prefer-workspace-packages=true 
+prefer-workspace-packages=true
+use-lockfile-v6=true
+lockfile=true
