📚 Enhance documentation setup with TypeDoc integration and improved styling
- Add TypeDoc API reference integration

- Update VitePress configuration with emoji-rich styling

- Add documentation section to README

- Split documentation build steps in GitHub Actions

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -39,8 +39,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build documentation
-        run: pnpm docs:build
+      - name: Build TypeDoc API documentation
+        run: pnpm docs:api
+
+      - name: Build VitePress documentation
+        run: pnpm vitepress build docs
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
