--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
     "lint": "tsc --noEmit && eslint . --format=codeframe",
     "lint:fix": "tsc --noEmit && eslint . --format=codeframe --fix",
-    "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" ts-node -P scripts/tsconfig.json scripts/readGithubCookies.ts",
+    "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" tsx scripts/readGithubCookies.ts",
     "prepare": "husky install",
     "docs:dev": "vitepress dev docs",
     "docs:preview": "vitepress preview docs",
@@ -89,6 +89,7 @@
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsup": "^8.3.5",
+    "tsx": "4.19.2",
     "typedoc": "^0.27.6",
     "typedoc-plugin-markdown": "^4.4.1",
     "typescript": "^5.7.2",
