--- a/package.json
+++ b/package.json
@@ -24,23 +24,22 @@
     "access": "public"
   },
   "scripts": {
-    "clean": "git clean -fdX && rm -rf dist && pnpm install",
+    "clean": "rm -rf dist node_modules && pnpm install",
     "build": "tsup src/index.ts src/cli/cli.ts --format cjs,esm --dts --clean --sourcemap --minify",
     "test": "jest",
     "type-check": "tsc --noEmit",
-    "prepack": "pnpm run type-check && pnpm run lint && pnpm run test",
-    "prepublishOnly": "pnpm run clean && pnpm run prepack && pnpm run build",
-    "install:global": "pnpm run build && pnpm install --global .",
-    "prettier": "prettier --write .",
+    "lint": "eslint . --format=codeframe",
+    "lint:fix": "eslint . --format=codeframe --fix",
+    "validate": "pnpm run type-check && pnpm run lint && pnpm run test",
+    "prepack": "pnpm run validate",
+    "prepublishOnly": "pnpm run clean && pnpm run validate && pnpm run build",
+    "format": "prettier --write .",
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
-    "lint": "tsc --noEmit && eslint . --format=codeframe",
-    "lint:fix": "tsc --noEmit && eslint . --format=codeframe --fix",
     "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" tsx scripts/readGithubCookies.ts",
     "prepare": "husky install",
+    "docs": "typedoc && ./scripts/fix-typedoc.sh && vitepress build docs",
     "docs:dev": "vitepress dev docs",
-    "docs:preview": "vitepress preview docs",
-    "docs:api": "typedoc && ./scripts/fix-typedoc.sh",
-    "docs:build": "pnpm docs:api && vitepress build docs"
+    "docs:preview": "vitepress preview docs"
   },
   "engines": {
     "node": "^20.0.0 || ^22.0.0"
