--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "scripts/**/*"],
+  "include": ["src/**/*", "scripts/**/*", "*.ts"],
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2018",
