chore: add directory listing step for debugging

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -51,6 +51,15 @@ jobs:
           CI: true
           BROWSER: none
 
+      - name: List docs directory
+        run: |
+          echo "Contents of docs directory:"
+          ls -la docs/
+          echo "Contents of docs/.vitepress directory:"
+          ls -la docs/.vitepress/ || true
+          echo "Contents of docs/.vitepress/dist directory:"
+          ls -la docs/.vitepress/dist/ || true
+
       - name: Restore xdg-open
         if: always()
         run: |
