--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,8 +2,8 @@ name: Deploy Documentation
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -13,7 +13,7 @@ permissions:
 
 # Allow only one concurrent deployment
 concurrency:
-  group: pages
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
@@ -46,19 +46,25 @@ jobs:
           sudo chmod +x /usr/bin/xdg-open
 
       - name: Build documentation
-        run: |
-          pnpm docs || {
-            echo "Documentation build failed with exit code $?"
-            echo "Current directory contents:"
-            ls -la
-            echo "Docs directory contents:"
-            ls -la docs/
-            exit 1
-          }
         env:
           CI: true
           BROWSER: none
           DEBUG: vitepress:*
+        run: |
+          echo "Running TypeDoc..."
+          pnpm typedoc
+          echo "TypeDoc output:"
+          ls -la docs/reference/
+
+          echo "Running fix-typedoc script..."
+          ./scripts/fix-typedoc.sh
+          echo "Fixed TypeDoc output:"
+          ls -la docs/reference/
+
+          echo "Building VitePress site..."
+          pnpm vitepress build docs
+          echo "VitePress output:"
+          ls -la docs/.vitepress/dist/
 
       - name: List docs directory
         run: |
@@ -70,9 +76,7 @@ jobs:
           ls -la docs/.vitepress/dist/ || true
 
       - name: Restore xdg-open
-        if: always()
-        run: |
-          sudo mv /usr/bin/xdg-open.bak /usr/bin/xdg-open || true
+        run: sudo mv /usr/bin/xdg-open.bak /usr/bin/xdg-open || true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
