--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "better-sqlite3": "^11.7.0",
     "consola": "^3.3.3",
     "destr": "^2.0.3",
+    "dotenv": "16.4.7",
     "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
