feat: Add Chrome cookie support, improve Safari cookie parsing, and enhance test coverage
diff --git a/package.json b/package.json
index 496c8d8..2430fc7 100644
--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "better-sqlite3": "^11.7.0",
     "consola": "^3.3.3",
+    "date-fns": "4.1.0",
     "destr": "^2.0.3",
     "dotenv": "16.4.7",
     "fast-glob": "^3.3.2",
diff --git a/scripts/dump-github-chrome-cookies.ts b/scripts/dump-github-chrome-cookies.ts
new file mode 100644
index 0000000..8045ea9
--- /dev/null
+++ b/scripts/dump-github-chrome-cookies.ts
@@ -0,0 +1,45 @@
+import { ChromeCookieQueryStrategy } from "../src/core/browsers/chrome/ChromeCookieQueryStrategy";
+import type { ExportedCookie } from "../src/types/schemas";
+import { createTaggedLogger } from "../src/utils/logHelpers";
+
+const logger = createTaggedLogger("dump-github-chrome-cookies");
+
+async function main(): Promise<void> {
+  try {
+    const strategy = new ChromeCookieQueryStrategy();
+
+    // Query all cookies from github.com domain
+    const cookies = await strategy.queryCookies("%", "github.com");
+
+    if (cookies.length === 0) {
+      logger.warn("No GitHub cookies found in Chrome");
+      return;
+    }
+
+    logger.info(`Found ${cookies.length} GitHub cookies:`);
+
+    // Print each cookie in a readable format
+    cookies.forEach((cookie: ExportedCookie) => {
+      console.log("\n-------------------");
+      console.log(`Name: ${cookie.name}`);
+      console.log(`Domain: ${cookie.domain}`);
+      console.log(`Value: ${cookie.value}`);
+      console.log(`Expiry: ${String(cookie.expiry)}`);
+      console.log(`Decrypted: ${cookie.meta?.decrypted ?? false}`);
+      console.log(`Profile: ${cookie.meta?.file ?? "Unknown"}`);
+    });
+
+  } catch (error) {
+    if (error instanceof Error) {
+      logger.error("Failed to dump GitHub cookies", { error });
+    } else {
+      logger.error("Failed to dump GitHub cookies", { error: String(error

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "better-sqlite3": "^11.7.0",
     "consola": "^3.3.3",
+    "date-fns": "4.1.0",
     "destr": "^2.0.3",
     "dotenv": "16.4.7",
     "fast-glob": "^3.3.2",
