fix: safari binary cookie parsing and github examples
diff --git a/examples/.eslintrc.js b/examples/.eslintrc.js
new file mode 100644
index 0000000..457e75c
--- /dev/null
+++ b/examples/.eslintrc.js
@@ -0,0 +1,28 @@
+module.exports = {
+  extends: "../eslint.config.js",
+  parserOptions: {
+    project: "./tsconfig.json",
+  },
+  rules: {
+    "jsdoc/require-example": "off",
+    "jsdoc/require-description": "off",
+    "jsdoc/require-returns": "off",
+    "jsdoc/require-param-description": "off",
+    "jsdoc/require-property": "off",
+    "jsdoc/require-property-description": "off",
+    "jsdoc/require-property-name": "off",
+    "jsdoc/require-returns-description": "off",
+    "jsdoc/check-line-alignment": "off",
+    "jsdoc/check-syntax": "off",
+    "jsdoc/check-values": "off",
+    "jsdoc/check-types": "off",
+    "jsdoc/check-property-names": "off",
+    "jsdoc/check-indentation": "off",
+    "jsdoc/multiline-blocks": "off",
+    "jsdoc/require-hyphen-before-param-description": "off",
+    "jsdoc/require-throws": "off",
+    "jsdoc/require-yields": "off",
+    "jsdoc/sort-tags": "off",
+    "jsdoc/check-examples": "off",
+  },
+};
diff --git a/examples/README.md b/examples/README.md
new file mode 100644
index 0000000..ff164b7
--- /dev/null
+++ b/examples/README.md
@@ -0,0 +1,37 @@
+# get-cookie Examples
+
+This directory contains example scripts demonstrating various ways to use get-cookie.
+
+## CLI Examples
+
+- `cli-examples.sh`: Shows how to use the command-line interface for common tasks
+
+## TypeScript/Node.js Examples
+
+- `basic-usage.ts`: Demonstrates basic Node.js module usage
+- `advanced-usage.ts`: Shows advanced usage with browser-specific strategies
+
+## Running the Examples
+
+### CLI Examples
+
+```bash
+# Make the script executable
+chmod +x cli-examples.sh
+
+# Run the examples
+./cli-examples.sh
+```
+
+### TypeScript Examples
+
+```bash
+# Install dependencies if you haven't already
+pnpm install
+
+# Run TypeScript examples
+ts-node bas

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:cli": "tsup --config tsup.cli.ts",
     "build": "pnpm run build:lib && pnpm run build:cli",
     "test": "jest",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --skipLibCheck",
     "lint": "eslint . --format=codeframe",
     "lint:fix": "eslint . --format=codeframe --fix",
     "validate": "pnpm run type-check && pnpm run lint && pnpm run test",
