refactor: remove dynamic imports in favor of direct exports
- Remove dynamicImports.ts and use direct exports in barrel files

- Update example files to use direct import pattern

- Update JSDoc examples to show correct import paths

- Remove index.d.ts as it's no longer needed

- Clean up tsconfig.json includes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,5 @@
 {
-  "include": [
-    "src/**/*",
-    "scripts/**/*",
-    "*.ts",
-    "src/core/cookies/dynamicImports.ts",
-    "examples/**/*"
-  ],
+  "include": ["src/**/*", "scripts/**/*", "*.ts", "examples/**/*"],
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2020",
