feat: add binary cookie creator script
- Add Swift package for creating Safari binary cookies

- Add shell script wrapper for easy compilation and execution

- Update gitignore for Swift and binary artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,11 @@ docs/api/
 # TypeDoc generated files
 docs/reference/*
 !docs/reference/index.md
+
+# Swift
+.build/
+*.xcodeproj
+*.xcworkspace
+.swiftpm/
+cookie-creator
+*.binarycookies
